--- a/styles.css
+++ b/styles.css
@@ -72,9 +72,12 @@ button:hover {
 
 .reset-button {
   text-align: center;
+  margin-top: 20px;
+
 }
 
+#resetButton {
+  display: block;
+  margin: 0 auto;
 
-#outputText {
-  resize: none;
 }
